--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> 서윤교 - 포트폴리오 </title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
     <link rel="shortcut icon" href="images/fv.png" type="image/x-icon">
 
     <script src="./js/jquery-1.11.3.js"></script>
