--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> 서윤교 - 포트폴리오 </title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
@@ -67,6 +66,7 @@
                 <div class="box about fl"><i class="xi-user-plus xi-2x"></i>
                     <dl>
                         <dt>ABOUT</dt>
+                        <dd>서윤교</dd>
                         <dd>ISTJ</dd>
                         <dd>1995-03-04</dd>
                         <dd>안산시 단원구 와동</dd>
@@ -146,89 +146,90 @@
                         </p>
                     </dd>
                 </dl>
-                <!-- 의류시험연구원 : 이미지 오 -->
+                <!-- 네이버 라인 : 이미지 오 -->
                 <dl>
                     <dt></dt>
                     <dd>
                         <h4>02.</h4>
-                        <h5>HANHWA <br /> CHEMICAL</h5>
+                        <h5>NAVER <br /> LINE</h5>
                         <p>
                             WEB CODING <br />
                             제작 : 메인페이지 <br /><br /><br />
-                            리뉴얼된 한화케미칼 메인페이지를 직접 코딩하여<br />
+                            현재 서비스 되고 있는 네이버 라인 메인페이지를<br /> 직접 코딩하여
                             웹으로 구현하였습니다.
                         </p>
                         <p class="site_btn">
-                            <a href="http://yon2881.dothome.co.kr/project/hanhwa/" target="_blank">WEBSITE</a>
+                            <a href="http://yon2881.dothome.co.kr/project/line/" target="_blank">WEBSITE</a>
                         </p>
                     </dd>
                 </dl>
-                <!-- 롯데월드 : 이미지 왼 -->
+                <!-- S-OIL : 이미지 왼 -->
                 <dl>
                     <dt></dt>
                     <dd>
                         <h4>03.</h4>
-                        <h5>HANHWA <br /> CHEMICAL</h5>
+                        <h5>S-OIL <br /> </h5>
                         <p>
                             WEB CODING <br />
                             제작 : 메인페이지 <br /><br /><br />
-                            리뉴얼된 한화케미칼 메인페이지를 직접 코딩하여<br />
+                            S-OIL의 메인페이지 중 일부를 직접 코딩하여<br />
                             웹으로 구현하였습니다.
                         </p>
                         <p class="site_btn">
-                            <a href="http://yon2881.dothome.co.kr/project/hanhwa/" target="_blank">WEBSITE</a>
+                            <a href="https://yon2881.github.io/soil/" target="_blank">WEBSITE</a>
                         </p>
                     </dd>
                 </dl>
-                <!-- CGV : 이미지 오 -->
+                <!-- WIX : 이미지 오 -->
                 <dl>
                     <dt></dt>
                     <dd>
                         <h4>04.</h4>
-                        <h5>HANHWA <br /> CHEMICAL</h5>
+                        <h5>WIX <br /> </h5>
                         <p>
                             WEB CODING <br />
                             제작 : 메인페이지 <br /><br /><br />
-                            리뉴얼된 한화케미칼 메인페이지를 직접 코딩하여<br />
-                            웹으로 구현하였습니다.
+                            윅스를 이용하여 간단한 양식의 <br />
+                            홈페이지를 구현하였습니다.
                         </p>
                         <p class="site_btn">
-                            <a href="http://yon2881.dothome.co.kr/project/hanhwa/" target="_blank">WEBSITE</a>
+                            <a href=" https://yon2881.wixsite.com/wcod/" target="_blank">WEBSITE</a>
                         </p>
                     </dd>
                 </dl>
-                <!-- 라인 : 이미지 왼 -->
+                <!-- 파파고 리뉴얼 애니메이션 : 이미지 왼 -->
                 <dl>
                     <dt></dt>
                     <dd>
                         <h4>05.</h4>
-                        <h5>HANHWA <br /> CHEMICAL</h5>
+                        <h5>NAVER <br /> PAPAGO</h5>
                         <p>
                             WEB CODING <br />
-                            제작 : 메인페이지 <br /><br /><br />
-                            리뉴얼된 한화케미칼 메인페이지를 직접 코딩하여<br />
-                            웹으로 구현하였습니다.
+                            제작 : 애니메이션 배너 <br /><br /><br />
+                            리뉴얼된 파파고 애니메이션 배너를 직접 제작하여<br />
+                            gif로 구현하였습니다.
                         </p>
                         <p class="site_btn">
-                            <a href="http://yon2881.dothome.co.kr/project/hanhwa/" target="_blank">WEBSITE</a>
+                            <a href="http://yon2881.dothome.co.kr/project/animationgif/" target="_blank">BANNER</a>
                         </p>
                     </dd>
                 </dl>
-                <!-- 대양신소재 : 이미지 오 (PSD)-->
+                <!-- 테르텐 : 이미지 오 (PSD)-->
                 <dl>
                     <dt></dt>
                     <dd>
                         <h4>06.</h4>
-                        <h5>HANHWA <br /> CHEMICAL</h5>
+                        <h5>TERUTEN <br /> </h5>
                         <p>
                             WEB CODING <br />
                             제작 : 메인페이지 <br /><br /><br />
-                            리뉴얼된 한화케미칼 메인페이지를 직접 코딩하여<br />
-                            웹으로 구현하였습니다.
+                            TERUTEN의 메인페이지를 분석하여<br />
+                            PHOTOSHOP을 통해 GRID를 적용하고 재구성하였습니다.
                         </p>
                         <p class="site_btn">
-                            <a href="http://yon2881.dothome.co.kr/project/hanhwa/" target="_blank">GRID</a>
-                            <a href="http://yon2881.dothome.co.kr/project/hanhwa/" target="_blank">PSD DOWN</a>
+                            <a href="https://yon2881.github.io/teruten/" target="_blank">PC-GRID</a>
+                            <a href="https://drive.google.com/drive/folders/1aB1enoJEnMK6GKNCGJ5Jux27RNswREPw?usp=sharing
+                            " target="_blank">PSD DOWN</a>
                         </p>
                     </dd>
                 </dl>
@@ -237,15 +238,15 @@
                     <dt></dt>
                     <dd>
                         <h4>07.</h4>
-                        <h5>HANHWA <br /> CHEMICAL</h5>
+                        <h5>UNIDOC <br /> </h5>
                         <p>
                             WEB CODING <br />
-                            제작 : 메인페이지 <br /><br /><br />
-                            리뉴얼된 한화케미칼 메인페이지를 직접 코딩하여<br />
-                            웹으로 구현하였습니다.
+                            제작 : BG <br /><br /><br />
+                            직접 고안 및 디자인한 원격의료진료시스템 UNIDOC의<br />
+                            시안을 pdf로 제작했습니다.
                         </p>
                         <p class="site_btn">
-                            <a href="http://yon2881.dothome.co.kr/project/hanhwa/" target="_blank">VIEW</a>
+                            <a href="https://yon2881.github.io/UNIDOC/" target="_blank">VIEW</a>
                         </p>
                     </dd>
                 </dl>
