--- a/index.html
+++ b/index.html
@@ -103,10 +103,7 @@
                         <dd>Adobe Xd</dd>
                         <dd>Zeplin</dd>
                         <dd>Visual Studio Code</dd>
-                        <dd>MS EXCEL</dd>
-                        <dd>MS POWERPOINT</dd>
-                        <dd>MS ACCESS</dd>
-                        <dd>HWP</dd>
+                        <dd>ReactJS</dd>
                     </dl>
                 </div>
                 <!-- skills -->
@@ -118,6 +115,7 @@
                         <dd>JavaScript</dd>
                         <dd>jQuery</dd>
                         <dd>Presentation</dd>
+                        <dd>ReactJS</dd>
                     </dl>
                 </div>
 
