--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             웹으로 구현하였습니다.
                         </p>
                         <p class="site_btn">
-                            <a href="http://yon2881.dothome.co.kr/project/hanhwa/" target="_blank">WEBSITE</a>
+                            <a href="https://yon2881.github.io/hanhwa/" target="_blank">WEBSITE</a>
                         </p>
                     </dd>
                 </dl>
@@ -157,7 +157,7 @@
                             웹으로 구현하였습니다.
                         </p>
                         <p class="site_btn">
-                            <a href="http://yon2881.dothome.co.kr/project/line/" target="_blank">WEBSITE</a>
+                            <a href="https://yon2881.github.io/line/" target="_blank">WEBSITE</a>
                         </p>
                     </dd>
                 </dl>
